@startuml

title __OBJECT's Class Diagram__\n

  package com.todolist.object {
    class Task {
        - dueDate : Date
        - taskName : String
        - projectName : String
        ~ status : String
        ~ locale : Locale
        ~ dateFormat : DateFormat
        + getProjectName()
        + setProjectName()
        + Task()
        + getStatus()
        + getDueDate()
        + setDueDate()
        + getTaskName()
        + setTaskName()
        + setStatus()
    }
  }
  

  package com.todolist.object {
    class ToDoList {
        - listItems : ArrayList<E>
        + addItem()
        + removeItem()
        + editItem()
        + getItem()
        + listCount()
        + getListItems()
        + setListItems()
    }
  }
  

  Task -up-|> Serializable
  ToDoList -up-|> List


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
